snapshots/syntax/library/functions/type_checking/isnull/isnull_msgbox.snap
---
source: vb6parse/src/syntax/library/functions/type_checking/isnull.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: MsgBox
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Field status: \""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: IsNull
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: dbField
                                - kind: RightParenthesis
                                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
